# IRApp

./: .gitignore  Dockerfile  README.md  requirements.txt
.github/workflows/: postman.yml
backend/: init_add.py  pyproject.toml  run.py
backend/app/: __init__.py  config.py
backend/app/models/: patient.py  procedure.py
backend/app/routes/: main.py  patients_route.py
backend/app/services/: patient_service.py
backend/tests/: test_services.py
frontend/: package-lock.json  package.json
frontend/src/components/patients/: PatientCard.tsx
frontend/src/hooks/: useApi.ts  usePatients.ts
frontend/src/services/: api.ts
frontend/tests/: PatientCard.test.tsx
