[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Salika <sxr655@student.bham.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.43"
blinker = "^1.9.0"
click = "^8.2.1"
flask = "^3.1.2"
flask-cors = "^6.0.1"
greenlet = "^3.2.4"
iniconfig = "^2.1.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
markupsafe = "^3.0.2"
marshmallow = "^4.0.1"
packaging = "^25.0"
pip = "^25.2"
pluggy = "^1.6.0"
pygments = "^2.19.2"
pytest = "^8.4.2"
typing-extensions = "^4.15.0"
werkzeug = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
